<resources>
    <string name="app_name">Dot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="connect">Connect</string>
    <string name="games">Games</string>
    <string name="resources">Resources</string>
    <string name="title_activity_progress">Progress Activity</string>
    <string name="title_activity_circular_progress_bar">Progress Monitor</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="random_color"> Random Colour</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_text">Login</string>
    <string name="signup_text"> Sign Up!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_activity_title">Create Account at DOT</string>
    <string name="parent_name_hint">"Parent's Name"</string>
    <string name="email_hint">Email</string>
    <string name="child_information">"Child's Profile Information:"</string>
    <string name="child_name">Name</string>
    <string name="child_age">Age</string>
    <string name="child_type">Type</string>
    <string name="child_medication">Medication</string>
    <string name="diagnosis_date">Diagnosis Date (dd/mm/yy)</string>
    <string name="medication">Medication</string>
    <string name="signup_error_message1">"Please make sure all the fields are filled.</string>
    <string name="signup_error_message2">"Please enter a gender for the child."</string>
    <string name="signup_error_message3">"Select only one of the gender options."</string>
    <string name="signup_error_title">"Oops!"</string>
    <string name="login_error_message">"Please make sure you enter a username and password!</string>
    <string name="login_error_title">"Oops!"</string>
    <string name="sign_out">"Sign out"</string>
    <string name="restart_session">"Restart Session"</string>
</resources>
