<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:elevation="50dp">

    <Button
        android:layout_width="160sp"
        android:layout_height="160sp"
        android:background="@drawable/mybutton"
        android:gravity="center_vertical"
        android:inputType="textCapWords"
        android:text="          Progress"
        android:textColor="#ffffff"
        android:id="@+id/button2"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:textStyle="bold"
        android:elevation="10dp"
        android:onClick="showProgress"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/games"
        android:id="@+id/button"
        android:layout_marginTop="97dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/schedule"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="42dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/connect"
        android:id="@+id/button4"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/resources"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button3"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4" />


</RelativeLayout>

