<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arunrawlani.dot.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_activity_title"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/parent_name_hint"
        android:ems="10"
        android:id="@+id/usernameField"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <requestFocus/>

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Password"
        android:id="@+id/passwordField"
        android:layout_below="@+id/usernameField"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignStart="@+id/usernameField" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="Email Address"
        android:id="@+id/emailField"
        android:layout_below="@+id/passwordField"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/child_information"
        android:id="@+id/child_information_title"
        android:layout_below="@+id/emailField"
        android:layout_alignLeft="@+id/emailField"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/child_name"
        android:hint="@string/child_name"
        android:layout_below="@+id/child_information_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/child_age"
        android:hint="@string/child_age"
        android:layout_below="@+id/child_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


        <EditText
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/child_medication"
            android:hint="@string/medication"
            android:layout_above="@+id/signupButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/child_diagnosis"
            android:layout_alignEnd="@+id/child_diagnosis" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:id="@+id/signupButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/child_age"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="1"
            android:id="@+id/radioGroup"
            android:layout_above="@+id/child_diagnosis">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:id="@+id/gender_male"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/gender_female"
                android:layout_weight="0.10" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"
                android:id="@+id/gender_other"
                android:layout_below="@+id/child_age"
                android:layout_alignRight="@+id/child_medication"
                android:layout_alignEnd="@+id/child_medication" />

        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="Diagnosis date"
            android:id="@+id/child_diagnosis"
            android:layout_above="@+id/child_medication"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</ScrollView>